Mention constant operator<->provider mapping

--- a/docs/registration.adoc
+++ b/docs/registration.adoc
@@ -25,6 +25,9 @@ Authorize the Random Beacon and TBTC applications.
 Once the tokens are staked the one controlling the Staking Provider account has to
 register an operator for the Random Beacon and TBTC applications.
 
+CAUTION: An Operator for the Provider registration can be submitted just once. The
+Operator address assignment cannot be updated.
+
 If a Key File for the Staking Provider account is available the registration
 can be performed from the <<register-operator-client>>.
 
