Export kubernetes section to devops doc

--- a/docs/index.adoc
+++ b/docs/index.adoc
@@ -5,3 +5,4 @@
 * xref:./registration.adoc[Registration]
 * xref:./run-keep-node.adoc[Run Keep Client Node]
 * xref:./development/README.adoc[Developers]
+* xref:./dev-ops.adoc[DevOps]
