--- a/infrastructure/eth-networks/private-testnet/README.adoc
+++ b/infrastructure/eth-networks/private-testnet/README.adoc
@@ -1,4 +1,4 @@
-# Keep Network Private Testnet
+= Keep Network Private Testnet
 
 We set up a Keep Network Private Testnet that is accessible by the permitted parties.
 Here we hold the code helping us to create a bundles for the parties.
@@ -10,9 +10,9 @@ receives a stake delegation to the `provider` account with authorized `beacon` a
 `tbtc` application. This is a production-like experience for the Staking Providers,
 where they will receive stakes from their customers.
 
-## Scripts
+== Scripts
 
-### Create New Bundle
+=== Create New Bundle
 
 To create a new bundle run:
 
@@ -20,7 +20,7 @@ To create a new bundle run:
 ./scripts/new-bundle.sh
 ```
 
-### Initialize Provider
+=== Initialize Provider
 
 To simulate a Staker delegation to a Provider and authorize the applications run:
 
