Add info for Private Testnet guide about funding operator
The operator account has to be funded by the Staking Provider.

--- a/infrastructure/eth-networks/private-testnet/bundles/bundle-guide.adoc
+++ b/infrastructure/eth-networks/private-testnet/bundles/bundle-guide.adoc
@@ -60,6 +60,9 @@ submitted from the Staking Provider Account, please refer to
 link:https://docs.keep.network/registration.html#register-operator[Register Operator]
 documentation.
 
+IMPORTANT: The Operator Account has to be funded with Goerli ETH (GöETH) so the
+client can submit transactions to the Ethereum chain.
+
 == Configuration
 
 For details on the Keep Client Node configuration visit
