Mention NAT for announced addresses

--- a/docs/run-keep-node.adoc
+++ b/docs/run-keep-node.adoc
@@ -146,9 +146,10 @@ An Announced Address is a layered addressing information (`multiaddress`/`multia
 announced to the Keep Network that is used by peers to connect with your node, e.g.:
 `/dns4/bootstrap-0.test.keep.network/tcp/3919` or `/ip4/104.154.61.116/tcp/3919`.
 
-You should set the `network.AnnouncedAddresses` (flag: `--network.announcedAddresses`)
-configuration property to the addresses under which your node is reachable for the
-public.
+If the machine you're running your node is not exposing a public IP (e.g. it is
+behind NAT) you should set the `network.AnnouncedAddresses` 
+(flag: `--network.announcedAddresses`) configuration property to an addresses 
+(`ip4` or `dns4`) under which your node is reachable for the public.
 
 To read more about `multiaddress` see the
 link:https://docs.libp2p.io/reference/glossary/#multiaddr[libp2p docummentation].
