--- a/docs/registration.adoc
+++ b/docs/registration.adoc
@@ -60,20 +60,21 @@ Command templates for the supported applications:
 
 [source,bash]
 ----
-export KEEP_CLIENT_ETHEREUM_WS_URL="<Ethereum API WS URL>"
-export OPERATOR_ADDRESS="<Operator Account Address>"
+ETHEREUM_WS_URL="<Ethereum API WS URL>"
 
-export KEEP_CLIENT_CONFIG_DIR="<Path to the directory containing the Staking Provider Key File>"
+OPERATOR_ADDRESS="<Operator Account Address>"
 
-export STAKING_PROVIDER_KEY_FILE_NAME="<Staking Provider Account Key File Name>"
-export STAKING_PROVIDER_KEY_FILE_PASSWORD="<Staking Provider Account Key File Password>"
+STAKING_PROVIDER_KEY_FILE_NAME="<Staking Provider Account Key File Name>"
+STAKING_PROVIDER_KEY_FILE_PASSWORD="<Staking Provider Account Key File Password>"
+
+KEEP_CONFIG_DIR="<Path to the directory containing the Staking Provider Key File>"
 
 docker run \
-    --volume $KEEP_CLIENT_CONFIG_DIR:/mnt/keep-client/config \
+    --volume $KEEP_CONFIG_DIR:/mnt/keep-client/config \
     --env KEEP_ETHEREUM_PASSWORD=$STAKING_PROVIDER_KEY_FILE_PASSWORD \
     us-docker.pkg.dev/keep-test-f3e0/public/keep-client:latest \
     ethereum \
-    --ethereum.url $KEEP_CLIENT_ETHEREUM_WS_URL \
+    --ethereum.url $ETHEREUM_WS_URL \
     --ethereum.keyFile /mnt/keep-client/config/$STAKING_PROVIDER_KEY_FILE_NAME \
     beacon random-beacon register-operator --submit \
     $OPERATOR_ADDRESS
@@ -84,20 +85,20 @@ docker run \
 
 [source,bash]
 ----
-export KEEP_CLIENT_ETHEREUM_WS_URL="<Ethereum API WS URL>"
-export OPERATOR_ADDRESS="<Operator Account Address>"
+ETHEREUM_WS_URL="<Ethereum API WS URL>"
+OPERATOR_ADDRESS="<Operator Account Address>"
 
-export KEEP_CLIENT_CONFIG_DIR="<Path to the directory containing the Staking Provider Key File>"
+KEEP_CONFIG_DIR="<Path to the directory containing the Staking Provider Key File>"
 
-export STAKING_PROVIDER_KEY_FILE_NAME="<Staking Provider Account Key File Name>"
-export STAKING_PROVIDER_KEY_FILE_PASSWORD="<Staking Provider Account Key File Password>"
+STAKING_PROVIDER_KEY_FILE_NAME="<Staking Provider Account Key File Name>"
+STAKING_PROVIDER_KEY_FILE_PASSWORD="<Staking Provider Account Key File Password>"
 
 docker run \
-    --volume $KEEP_CLIENT_CONFIG_DIR:/mnt/keep-client/config \
+    --volume $KEEP_CONFIG_DIR:/mnt/keep-client/config \
     --env KEEP_ETHEREUM_PASSWORD=$STAKING_PROVIDER_KEY_FILE_PASSWORD \
     us-docker.pkg.dev/keep-test-f3e0/public/keep-client:latest \
     ethereum \
-    --ethereum.url $KEEP_CLIENT_ETHEREUM_WS_URL \
+    --ethereum.url $ETHEREUM_WS_URL \
     --ethereum.keyFile /mnt/keep-client/config/$STAKING_PROVIDER_KEY_FILE_NAME \
     ecdsa wallet-registry register-operator --submit \
     $OPERATOR_ADDRESS
