Update link in the root README.adoc

--- a/README.adoc
+++ b/README.adoc
@@ -36,8 +36,8 @@ A good place to start is the link:docs/[the docs directory].
 
 === Running a Node
 
-To run your own node in the Keep network, follow the
-link:docs/run-random-beacon.adoc[run Random Beacon doc]. Feedback on
+To run your own node in the Keep Network, follow the
+link:https://docs.keep.network/run-keep-node.html[Run Keep Node] doc. Feedback on
 this process and the documentation
 https://github.com/keep-network/keep-core/issues[is appreciated!]
 
