Drop KEEP_ prefix from env names

--- a/docs/registration.adoc
+++ b/docs/registration.adoc
@@ -44,7 +44,7 @@ An operator-registering transaction can be submitted with the Keep Client.
 The commands that should be used are provided below.
 You need to replace a few values in the commands:
 
-* `KEEP_CLIENT_ETHEREUM_WS_URL` - an URL to the Ethereum WebSocket API,
+* `ETHEREUM_WS_URL` - an URL to the Ethereum WebSocket API,
 
 * `STAKING_PROVIDER_KEY_FILE_PASSWORD` - a password used for the Staking Provider
 Ethereum Key File encryption,
@@ -67,10 +67,10 @@ OPERATOR_ADDRESS="<Operator Account Address>"
 STAKING_PROVIDER_KEY_FILE_NAME="<Staking Provider Account Key File Name>"
 STAKING_PROVIDER_KEY_FILE_PASSWORD="<Staking Provider Account Key File Password>"
 
-KEEP_CONFIG_DIR="<Path to the directory containing the Staking Provider Key File>"
+CONFIG_DIR="<Path to the directory containing the Staking Provider Key File>"
 
 docker run \
-    --volume $KEEP_CONFIG_DIR:/mnt/keep-client/config \
+    --volume $CONFIG_DIR:/mnt/keep-client/config \
     --env KEEP_ETHEREUM_PASSWORD=$STAKING_PROVIDER_KEY_FILE_PASSWORD \
     us-docker.pkg.dev/keep-test-f3e0/public/keep-client:latest \
     ethereum \
@@ -88,13 +88,13 @@ docker run \
 ETHEREUM_WS_URL="<Ethereum API WS URL>"
 OPERATOR_ADDRESS="<Operator Account Address>"
 
-KEEP_CONFIG_DIR="<Path to the directory containing the Staking Provider Key File>"
+CONFIG_DIR="<Path to the directory containing the Staking Provider Key File>"
 
 STAKING_PROVIDER_KEY_FILE_NAME="<Staking Provider Account Key File Name>"
 STAKING_PROVIDER_KEY_FILE_PASSWORD="<Staking Provider Account Key File Password>"
 
 docker run \
-    --volume $KEEP_CONFIG_DIR:/mnt/keep-client/config \
+    --volume $CONFIG_DIR:/mnt/keep-client/config \
     --env KEEP_ETHEREUM_PASSWORD=$STAKING_PROVIDER_KEY_FILE_PASSWORD \
     us-docker.pkg.dev/keep-test-f3e0/public/keep-client:latest \
     ethereum \
