--- a/docs/development/README.adoc
+++ b/docs/development/README.adoc
@@ -10,10 +10,9 @@
 toc::[]
 
 == Quick installation
-To quickly install and start a client use the following scripts.
 
 === Pre-requirements
-For development purposes, it is convenient to set up a local Ethereum client with a group of connected peers. A note-taken walkthrough <<local-t-network.adoc,[set up local T network]>>  covers the entire process
+For development purposes, it is convenient to set up a local Ethereum client with a group of connected peers. A note-taken walkthrough link:local-t-network.adoc[set up local T network] covers the entire process
 including setting up a local Ethereum client, deploying T contracts and
 configuring T peers. +
 
@@ -21,7 +20,7 @@ Additionaly, to start a client we need to provide config options either by creat
 
 === Starting a client
 
-Run from the project root:
+To quickly setup and start a client use the following scripts from the project root:
 
 * `./scripts/install.sh`
 * `./scripts/initialize.sh`
@@ -55,20 +54,34 @@ Command line arguments:
         --skip-client-build: Should execute contracts part only. Client installation will not be executed
 ```
 
-The `./scripts/initialize.sh --stake-owner <address>` needs to be run for each 
-client. Default setup assumes that the staking provider, operator, beneficiary,
-and the authorizer all have the same addresses as the stake owner. Only the
-`stake-owner` has to be unique for the default setup. The default stake amount is
-`1,000,000 T` tokens. The default authorization amount is the minimum authorization
-amount +
-Ex. if you need to initialize a network with 3 clients using the default setup,
-then this script needs to be run 3 times with a different `--stake-owner` address
-like so: +
-- `initialize.sh --stake-owner <address1>` +
-- `initialize.sh --stake-owner <address2>` +
-- `initialize.sh --stake-owner <address3>`
+The `./scripts/initialize.sh` has to be run for each 
+client and if the `--stake-owner <address>` is not set, then it will prompt you to select a configuration file that will be used to fetch the stake owner's address from. Default setup assumes that the staking provider, operator, beneficiary, and the authorizer all have the same addresses as the stake owner. Only the `stake-owner` has to be unique for the default setup. The default stake amount is `1,000,000 T` tokens. The default authorization amount is the minimum authorization amount +
+Ex. if you need to initialize a network with 3 clients using the default setup, then this script needs to be run 3 times with a different selected config file like so: +
+```
+./scripts/initialize.sh
 
-<<<<<<< HEAD
+Select client config file:
+1) config.toml <--
+2) config1.toml
+3) config2.toml
+```
+```
+./scripts/initialize.sh
+
+Select client config file:
+1) config.toml
+2) config1.toml <--
+3) config2.toml
+``` 
+```
+./scripts/initialize.sh
+
+Select client config file:
+1) config.toml
+2) config1.toml
+3) config2.toml <--
+``` 
+
 The `+initialize.sh+` script will:
 
 * mint & approve `T` tokens
@@ -81,13 +94,10 @@ For more info please refer to `./scripts/initialize.sh --help`
 ```
 Usage: ./scripts/initialize.sh --network <network> --stake-owner <stake owner address> --staking-provider <staking provider address> --operator <operator address> --beneficiary <beneficiary address> --authorizer <authorizer address> --stake-amount <stake amount> --authorization-amount <authorization amount>
 
-Mandatory line arguments:
-
-        --stake-owner: Stake owner address
-
 Optional line arguments:
 
         --network: Ethereum network for keep-core client. Available networks and settings are specified in the 'hardhat.config.ts'
+        --stake-owner: Stake owner address
         --staking-provider: Staking provider address
         --operator: Operator address
         --beneficiary: Staking beneficiary address
@@ -96,15 +106,57 @@ Optional line arguments:
         --authorization-amount: Authorization amount
 ```
 
-Afer executing `install.sh` and `initialize.sh` now you can run `./scripts/start.sh`
-to start a client. It will prompt you to chose from the available config files that
-should match the one chosen for `./scripts/initialize.sh`. Please refer to
+Afer executing `install.sh` and `initialize.sh` now you can run `./scripts/start.sh` to start a client. It will prompt you to chose from the available config files (that should match the one chosen for `./scripts/initialize.sh`) and the log level. 
+```
+./scripts/start.sh
+
+Select client config file:
+1) config.toml <--
+2) config1.toml
+3) config2.toml
+1
+
+Select log level [info]:
+1) info
+2) debug
+3) custom...
+```
+```
+./scripts/start.sh
+
+Select client config file:
+1) config.toml
+2) config1.toml <--
+3) config2.toml
+2
+
+Select log level [info]:
+1) info
+2) debug
+3) custom...
+``` 
+```
+./scripts/start.sh
+
+Select client config file:
+1) config.toml
+2) config1.toml
+3) config2.toml <--
+3
+
+Select log level [info]:
+1) info
+2) debug
+3) custom...
+```
+
+Please refer to
 `./scripts/start.sh --help` for more info
 
 ```
 ./scripts/start.sh --help
 
-Usage: ENV_VAR(S) ./scripts/start.sh --config-dir-path <path-to-configuration-files>
+Usage: ENV_VAR(S) ./scripts/start.sh --config-dir <path-to-configuration-files>
 
 Environment variables:
 
@@ -112,70 +164,8 @@ Environment variables:
 
 Command line arguments:
 
-        --config-dir-path: Path to a client configuration files
+        --config-dir: Path to a client configuration files
 ```
-
-=== Configuration
-
-==== Application
-
-The client expects configuration options to be specified in a config file or passed
-as parameters. If you specify an option by using a parameter on the command line,
-it overrides the value from the configuration file.
-
-Application configuration can be stored in a file and passed to the application
-run command with the `--config` flag. Example:
-[source,bash]
-----
-./keep-client --config /path/to/your/config.toml start
-----
-
-Configuration files in formats TOML, YAML and JSON are supported.
-
-==== Operator's Ethereum Key File
-
-Ethereum Key File is expected to be encrypted with a password. The password has
-to be provided in prompt after the client starts or configured as environment
-variable `KEEP_ETHEREUM_PASSWORD`.
-
-==== Command-line Options
-
-[source,bash,role=small]
-----
-include::cmd-help[]
-----
-
-==== Sample Config File [[sample_config_file]]
-
-[source,toml,role=small]
-----
-include::../../configs/config.toml.SAMPLE[]
-----
-
-=== Network
-
-Default port mappings.
-
-[%header,cols=2*]
-|===
-|Egress
-|Port
-
-|Keep Network
-| TCP: `3919`
-|===
-
-[%header,cols=2*]
-|===
-|Ingress
-|Port
-
-|Keep Network
-|`3919`
-|===
-
-If you set a different `port` in your configuration, or configure `peers` with
-non-default ports configured, firewall rules will need to be adjusted accordingly.
 
 == Development Guidelines
 
