Add icons configuration for GitHub
Github requires some additional config in the adoc file to show the
icons.

--- a/infrastructure/eth-networks/private-testnet/bundles/bundle-guide.adoc
+++ b/infrastructure/eth-networks/private-testnet/bundles/bundle-guide.adoc
@@ -5,6 +5,14 @@
 :source-highlighter: rouge
 :icons: font
 
+ifdef::env-github[]
+:tip-caption: :bulb:
+:note-caption: :information_source:
+:important-caption: :heavy_exclamation_mark:
+:caution-caption: :fire:
+:warning-caption: :warning:
+endif::[]
+
 = Keep Network Private Testnet Bundle
 
 Use this bundle to setup Keep Network node running on Keep Network Private Testnet.
