--- a/docs-v1/development/README.adoc
+++ b/docs-v1/development/README.adoc
@@ -18,11 +18,11 @@ repository. A simple `docker build` should get you a functioning container.
 If you want to build natively, there are a few prereqs you'll need to go through.
 In particular, you'll need the
 https://developers.google.com/protocol-buffers/docs/downloads[protobuf
-compiler].  You'll also need to install the `protoc-gen-gogoslick` toolchain,
+compiler].  You'll also need to install the `protoc-gen-go` toolchain,
 which you can install using `go get`:
 
 ```
-go get -u github.com/gogo/protobuf/protoc-gen-gogoslick
+go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
 ```
 
 Run `+go generate ./.../+` from `keep-core` and if everything is fine, start the
@@ -100,7 +100,7 @@ branches are instead published to `+https://docs.keep.network/<branch name>/+`.
 
 - Please avoid using `~` when defining `$GOBIN` location and use `$HOME` instead.
   We've been observing https://github.com/google/protobuf/issues/3355[some issues]
-  with locating `protoc-gen-gogoslick` when running `go generate` and `$GOBIN`
+  with locating `protoc-gen-go` when running `go generate` and `$GOBIN`
   contained `~`.
 
 - For Mojave, if you have a problem with missing include or missing library and
