Document deployments and contracts addresses
We need one source of truth when it comes to listing deployment info and
addresses of the contracts on different environments. We create a separate doc
that would hold that information and would be linked to from other documents
referencing its content. Thanks to this, after new deployment we'll need to
update the deployment info only in one place.

--- a/docs/registration.adoc
+++ b/docs/registration.adoc
@@ -127,4 +127,4 @@ page for the recent Mainnet addresses of the contracts.
 // TODO: Add section with the Keep Network contracts addresses to the Threshold Network docs.
 
 
-NOTE: icon:flask[] For Testnet contracts please visit the xref:./run-keep-node.adoc#testnet-contracts[link].
+NOTE: icon:flask[] For Testnet contracts please visit the xref:./deployments.adoc#goerli-contracts[link].
