--- a/docs/index.adoc
+++ b/docs/index.adoc
@@ -6,3 +6,4 @@
 * xref:./run-keep-node.adoc[Run Keep Client Node]
 * xref:./development/README.adoc[Developers]
 * xref:./dev-ops.adoc[DevOps]
+* xref:./deployments.adoc[Deployments and contracts addresses]
