--- a/infrastructure/kube/keep-test/monitoring/README.adoc
+++ b/infrastructure/kube/keep-test/monitoring/README.adoc
@@ -156,7 +156,6 @@ The nodes to monitor are resolved from Kubernetes' services labeled `app=keep`.
 
 ### Config Map
 
-
 Grafana configuration files are held in Config Maps that are generated with <<kustomization>> tool.
 
 NOTE: To apply the configuration to the cluster please see <<kustomization-grafana>>
@@ -257,8 +256,8 @@ To configure the Ingress following steps have to be executed:
 gcloud compute addresses create keep-test-monitoring-ingress --global
 ```
 
-2. Create a Cloud DNS entry to point to the IP created in the previous step. Follow
-the
+2. Create a Cloud DNS entry to point to the IP created in the previous step (`gcloud compute addresses list`).
+Follow the
 link:https://cloud.google.com/dns/docs/set-up-dns-records-domain-name#create_a_record_to_point_the_domain_to_an_external_ip_address[Google Cloud documentation].
 
 3. Deploy the Ingress configuration:
@@ -278,7 +277,6 @@ Google Cloud Documentation:
 - link:https://cloud.google.com/kubernetes-engine/docs/how-to/managed-certs#gcloud[Using Google-managed SSL certificates]
 
 // TODO:
-// - [ ] Expose Grafana publicly (https://grafana.com/docs/grafana/latest/dashboards/dashboard-public/)
 // - [ ] Revisit kubernetes scrape configuration in Prometheus' `config.yaml` - 
 // remove not needed entries
 // - [ ] Add Grafana dashboard for Kubernetes resources monitoring
