--- a/docs/run-keep-node.adoc
+++ b/docs/run-keep-node.adoc
@@ -394,9 +394,8 @@ include::../config/_peers/goerli[]
 [#testnet-contracts,Testnet Contracts]
 === Contracts
 
-To get adresses of contracts on Testnet see the
-xref:deployments#goerli-contracts[Görli - Contracts addresses] section in our
-developer docs.
+To get adresses of contracts on Testnet please see the
+link:https://docs.threshold.network/extras/contract-addresses/goerli-testnet#tbtc-application-contracts[link].
 
 === Installation
 
